--- a/Consumer/src/main/resources/application.yml
+++ b/Consumer/src/main/resources/application.yml
@@ -16,3 +16,8 @@ eureka:
 feign:
   hystrix:
     enabled: true
+  httpclient:
+    connection-timeout: 60000
+
+logging:
+  config: classpath:log4j2.xml
