--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -12,6 +12,7 @@
         <module>../Provider</module>
         <module>../Consumer</module>
         <module>../Eureka</module>
+        <module>../HystrixDashboard</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -287,6 +288,11 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+                <version>2.2.5.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
                 <version>2.2.5.RELEASE</version>
             </dependency>
         </dependencies>
