--- a/Provider/src/main/resources/application.yaml
+++ b/Provider/src/main/resources/application.yaml
@@ -1,9 +1,13 @@
 server:
+  # 端口可以改成自己想要的
   port: 8081
+  servlet:
+    context-path: /
 
 spring:
   application:
-    name: codeSharingCommunityProvider
+    # 同一微服务里所有的提供者必须同名, 所对应的微服务名称为此值全大写
+    name: CodeSharingCommunityProvider
   datasource:
     username: root
     password: pyb***20000112
@@ -28,15 +32,24 @@ mybatis:
 eureka:
   client:
     service-url:
+      # 将自己注册到哪一个 Eureka 管理里, 如 Eureka 集群, 则需要注册到所有 Eureka 集群里
       defaultZone: http://localhost:7001/eureka/
   instance:
-    instance-id: CodeSharingCommumity_服务端
+    # 自己在 Eureka 里的名称, 不可重复
+    instance-id: CodeSharingCommunity_服务端
+    # 显示自己的 IP
     prefer-ip-address: true
+
 info:
-  app.name: CodeSharingCommumity_服务端_01
+  app.name: CodeSharingCommunity_服务端_01
   company.name: www.halfdream.cn/半梦的个人网址
-  build.artifactId: ${project.artifactId}$
-  build.version: ${project.version}$
+  build.artifactId: ${project.artifactId}
+  build.version: ${project.version}
 
 logging:
   config: classpath:log4j2/log4j2.xml
+
+csc:
+  cors:
+    # 该配置代表本服务允许访问的域名
+    allow-ip: localhost, 121.199.27.93, 129.204.206.237
