--- a/Consumer/pom.xml
+++ b/Consumer/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.pdsu.CodeSharingCommunity</groupId>
-            <artifactId>Api</artifactId>
+            <artifactId>Tool</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -64,10 +64,6 @@
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
     </dependencies>
 
