--- a/Provider/pom.xml
+++ b/Provider/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.pdsu.CodeSharingCommunity</groupId>
-            <artifactId>Api</artifactId>
+            <artifactId>Tool</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -88,10 +88,6 @@
             <optional>true</optional>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j2 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
@@ -202,7 +198,7 @@
     </dependencies>
 
     <build>
-        <finalName>Provider</finalName>
+        <finalName>${project.artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
