提高系统扩展性, 把一些常用词修改为常量

--- a/Provider/src/main/resources/properties/csc.properties
+++ b/Provider/src/main/resources/properties/csc.properties
@@ -27,6 +27,6 @@
 # blobImgFilePath = /pdsu/web/blob/img/ #
 #########################################
 # 该属性为用户默认头像名称
-#############################################################
-# defaultUserImgName = 422696839bb3222a73a48d7c97b1bba4.jpg #
-#############################################################
+######################################################
+# userImgName = 422696839bb3222a73a48d7c97b1bba4.jpg #
+######################################################
