shiro 认证的分布式搭建

--- a/Api/src/main/resources/properties/csc.properties
+++ b/Api/src/main/resources/properties/csc.properties
@@ -7,26 +7,26 @@
 # 必须添加 '.' , 该点有重要的意义, 如未添加, 则图片为无类型
 # 可命名格式大致为所有图片格式, 如 .png, .jpg, .jfif 等
 ####################
-# imgSuffix = .jpg #
+imgSuffix = .jpg
 ####################
 # 该属性为确认用户上传文件资源时储存地址
 # 最后一个 '/' 为必加, 如不添加, 则文件输出为乱码
 ##################################
-# fileFilePath = /pdsu/web/file/ #
+fileFilePath = /pdsu/web/file/
 ##################################
 # 该属性为确认用户头像储存地址
 # 最后一个 '/' 为必加, 如不添加, 则文件输出为乱码
 # 如添加修改此变量, 则需同时修改 tomcat 对应映射图片的路径
 ####################################
-# userImgFilePath = /pdsu/web/img/ #
+userImgFilePath = /pdsu/web/img/
 ####################################
 # 该属性为确认博客页面上传图片的储存地址
 # 最后一个 '/' 为必加, 如不添加, 则文件输出为乱码
 # 如添加修改此变量, 则需同时修改 tomcat 对应映射图片路径
 #########################################
-# blobImgFilePath = /pdsu/web/blob/img/ #
+blobImgFilePath = /pdsu/web/blob/img/
 #########################################
 # 该属性为用户默认头像名称
 ######################################################
-# userImgName = 422696839bb3222a73a48d7c97b1bba4.jpg #
+userImgName = 422696839bb3222a73a48d7c97b1bba4.jpg
 ######################################################
