--- a/Consumer/src/main/resources/application.yaml
+++ b/Consumer/src/main/resources/application.yaml
@@ -5,7 +5,7 @@
 #spring:
 #  application:
 #    # 本名称并无实际意义, 因为本服务不注册进 Eureka
-#    name: CodeSharingCommumity_客户端
+#    name: CodeSharingCommunity_客户端
 #eureka:
 #  client:
 #    service-url:
@@ -22,14 +22,20 @@
 #    # 开启 hystrix 降级机制
 #    # 降级即为服务端宕机时, 一个备用的响应返回
 #    enabled: true
-#  httpclient:
-#    # 当请求等待时间大于设定值时, 直接熔断返回备用相应
-#    # 单位：ms
-#    connection-timeout: 60000
 #
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        #设置超时时间
+#        isolation:
+#          thread:
+#            timeoutInMilliseconds: 60000
+#        semaphore:
+#          maxConcurrentRequests: 20
 #logging:
 #  config: classpath:log4j2.xml
 #csc:
 #  cors:
 #    # 该配置代表本服务允许访问的域名
-#    allow-ip: all
+#    allow-ip: http://112.124.30.43:8080
