shiro 认证的完善, 修复博客页面上传图片的404的错误

--- a/Provider/pom.xml
+++ b/Provider/pom.xml
@@ -53,8 +53,8 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
