--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -85,11 +85,10 @@
                 <version>1.3.0</version>
             </dependency>
             <!-- druid 连接池-->
-            <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.23</version>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>3.4.5</version>
             </dependency>
             <!-- MySQL数据库驱动 -->
             <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
