--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -320,6 +320,16 @@
                 <artifactId>spring-core</artifactId>
                 <version>5.3.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.4.2</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>3.5.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
