--- a/Provider/src/main/resources/application.yaml
+++ b/Provider/src/main/resources/application.yaml
@@ -24,6 +24,15 @@ spring:
       password: pyb***20000112
       jdbc-url: jdbc:mysql://localhost:3306/pdsu_csc?useSSL=false&serverTimezone=UTC
       driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: localhost
+    password: pyb***20000112
+    port: 6379
+    jedis:
+      pool:
+        max-active: 60
+        max-wait: 60
+        max-idle: 10
 
 
 mybatis:
