--- a/GatewayRouting/src/main/resources/application.yaml
+++ b/GatewayRouting/src/main/resources/application.yaml
@@ -65,7 +65,7 @@
 #    study:
 #      path: /**
 #      service-id: CodeSharingCommunityConsumer
-#  ignored-patterns: /user/login, /user/loginstatus
+#  ignored-patterns: /user/login, /user/loginstatus, /user/logout
 #
 #info:
 #  app.name: CodeSharingCommunity_路由网关_01
