--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -15,6 +15,7 @@
         <module>../HystrixDashboard</module>
         <module>../WebConfigServer</module>
         <module>../Tool</module>
+        <module>../GatewayRouting</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -84,7 +85,7 @@
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>1.3.0</version>
             </dependency>
-            <!-- druid 连接池-->
+            <!-- HikariCP 连接池-->
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
